[gd_scene load_steps=7 format=3 uid="uid://cgkpdn4s7a0bm"]

[ext_resource type="Theme" uid="uid://hur5ivph54t0" path="res://ui/theme.tres" id="1_laoeq"]
[ext_resource type="Script" path="res://menu.gd" id="2_v2y31"]

[sub_resource type="Animation" id="Animation_6tgr0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.87451)]
}

[sub_resource type="Animation" id="Animation_6bwak"]
resource_name = "to_game"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.87451), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qcj3v"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0.87451)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t75vd"]
_data = {
"RESET": SubResource("Animation_6tgr0"),
"fade_in": SubResource("Animation_qcj3v"),
"to_game": SubResource("Animation_6bwak")
}

[node name="MenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.87451)

[node name="Menu" type="VBoxContainer" parent="."]
process_mode = 3
custom_minimum_size = Vector2(500, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = ExtResource("1_laoeq")
theme_override_constants/separation = 23
script = ExtResource("2_v2y31")

[node name="Start" type="Button" parent="Menu"]
process_mode = 2
layout_mode = 2
text = "Start"

[node name="Resume" type="Button" parent="Menu"]
process_mode = 2
visible = false
layout_mode = 2
text = "Resume"

[node name="GridContainer" type="GridContainer" parent="Menu"]
process_mode = 2
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="Menu/GridContainer"]
layout_mode = 2
text = "Mouse Sensitivity"
horizontal_alignment = 2

[node name="SensitivitySlider" type="HSlider" parent="Menu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.01
max_value = 2.0
step = 0.01
value = 0.6

[node name="Label2" type="Label" parent="Menu/GridContainer"]
layout_mode = 2
text = "Audio Volume"
horizontal_alignment = 2

[node name="AudioVolumeSlider" type="HSlider" parent="Menu/GridContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="Exit" type="Button" parent="Menu"]
process_mode = 2
layout_mode = 2
text = "Exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu"]
autoplay = "fade_in"
libraries = {
"": SubResource("AnimationLibrary_t75vd")
}

[connection signal="pressed" from="Menu/Start" to="Menu" method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Resume" to="Menu" method="resume"]
[connection signal="value_changed" from="Menu/GridContainer/SensitivitySlider" to="Menu" method="_on_sensitivity_slider_value_changed"]
[connection signal="value_changed" from="Menu/GridContainer/AudioVolumeSlider" to="Menu" method="_on_audio_volume_slider_value_changed"]
[connection signal="pressed" from="Menu/Exit" to="Menu" method="_on_exit_pressed"]
